--- a/.github/workflows/revenant.yml
+++ b/.github/workflows/revenant.yml
@@ -2,45 +2,25 @@ name: Revenant Tape 2026 — LIVE FOREVER
 
 on:
   workflow_dispatch:
-  # manual trigger
   schedule:
-    - cron: '*/7 * * * *'   # every 7 minutes
+    - cron: '*/7 * * * *'
   push:
-    branches: [ main, master ]
 
 jobs:
-  revenant:
+  run:
     runs-on: ubuntu-latest
-    timeout-minutes: 1440
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        # ← NO "path:" line at all → everything goes to root
+      - uses: actions/checkout@v4
 
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-          cache: 'pip'
 
-      - name: Nuclear install — bypasses the bug forever
-        run: |
-          rm -rf ~/.cache/pip
-          pip install --upgrade --force-reinstall --no-cache-dir pip setuptools wheel
-          pip install --force-reinstall --no-cache-dir \
-            polygon-api-client yfinance requests feedparser
+      - run: python -m pip install --upgrade pip
+      - run: pip install polygon-api-client yfinance requests feedparser
 
-      - name: Verify Polygon key
-        env:
-          MASSIVE_API_KEY: ${{ secrets.MASSIVE_API_KEY }}
-        run: |
-          python -c "from polygon import RESTClient; print('Polygon LIVE:', RESTClient('$MASSIVE_API_KEY').get_ticker_details('SPY').ticker)"
-
-      - name: LAUNCH REVENANT — WILL NEVER DIE
+      - run: python revenant.py
         env:
           MASSIVE_API_KEY: ${{ secrets.MASSIVE_API_KEY }}
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
           DISCORD_USER_ID: ${{ secrets.DISCORD_USER_ID }}
-        run: |
-          python revenant.py
